sumo/tests/traci/VariableRetrieval/Lane/errors/UnsupportedVariable/testclient_out.traci
TraCITestClient output file. Date: Wed May 20 15:24:01 2009


-> Command sent: <SimulationStep>:
  TargetTime=5.00 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <GetVariable>:
  domID=163 varID=255 objID=dummy
.. Answered with error to command (163), [description: Unsupported variable specified]

-> Command sent: <SimulationStep>:
  TargetTime=6.00 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
